Fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ i .em {
 /*Experience*/
 
 .entry {
-	margin-bottom: 6vw;
+	margin-bottom: 4.5vw;
 }
 
 
